Add HTML files with slides

--- a/genindex.html
+++ b/genindex.html
@@ -202,7 +202,7 @@
       <div class="sidebar-sticky"><a class="sidebar-brand" href="index.html">
   
   <div class="sidebar-logo-container">
-    <img class="sidebar-logo" src="_static/email-signature.png" alt="Logo"/>
+    <img class="sidebar-logo" src="_static/iac-hms-logo.png" alt="Logo"/>
   </div>
   
   <span class="sidebar-brand-text">QuPath Workshop at Harvard Medical School</span>
